Fix a bit